@@ -1,3 +1,7 @@
+2010-07-31  Chong Yidong  <cyd@stupidchicken.com>
+
+	* xselect.c (x_own_selection): Use list4.
+
 2010-07-30  Dan Nicolaescu  <dann@ics.uci.edu>
 
 	* buffer.c (Qwindow): Do not define, already defined in data.c.
